--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         </div>
        
         <ul>
-          <li>Home</li>
+          <li> <a href="#hero" >Home</a></li>
           <li>
            </i>
-            contact
+            <a href="#about">About</a>
           </li>
+          <li><a href="#skills">Skill</a></li>
           <li>
-           E-mail
+          <a href="#container ">Contact</a>
           </li>
         </ul>
         
